fix: rate__tips--bottom z-index

--- a/style/mobile/components/rate/v2/_index.less
+++ b/style/mobile/components/rate/v2/_index.less
@@ -118,6 +118,7 @@
     &--bottom {
       top: calc(100% + 8px);
       bottom: auto;
+      z-index: 1;
     }
 
     &-item {
